infra/k8s/chili-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chili-app
  labels:
    app.kubernetes.io/name: chili
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chili
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
